--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,21 +6,46 @@ on:
 
 jobs:
   build:
-    name: Build for ${{ matrix.os }}
+    name: Build for ${{ matrix.os }} (${{ matrix.target }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
+          # Linux builds
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: ""
+            name: "Linux x64"
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            suffix: ""
+            name: "Linux ARM64 (Raspberry Pi 64-bit)"
+            use_cross: true
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            suffix: ""
+            name: "Linux ARMv7 (Raspberry Pi 32-bit)"
+            use_cross: true
+          
+          # macOS builds
           - os: macos-latest
             target: x86_64-apple-darwin
             suffix: ""
+            name: "macOS x64"
+          
+          # Windows builds
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             suffix: ".exe"
+            name: "Windows x64"
+          - os: windows-latest
+            target: i686-pc-windows-msvc
+            suffix: ".exe"
+            name: "Windows x86 (32-bit)"
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+            suffix: ".exe"
+            name: "Windows ARM64"
     
     steps:
       - uses: actions/checkout@v3
@@ -32,7 +57,19 @@ jobs:
           target: ${{ matrix.target }}
           override: true
       
-      - name: Build binaries
+      # Install cross for ARM Linux targets
+      - name: Install cross
+        if: matrix.use_cross
+        run: cargo install cross
+      
+      # Build with cross for ARM Linux targets
+      - name: Build with cross (ARM Linux)
+        if: matrix.use_cross
+        run: cross build --release --target ${{ matrix.target }}
+      
+      # Build with cargo for other targets
+      - name: Build with cargo
+        if: ${{ !matrix.use_cross }}
         uses: actions-rs/cargo@v1
         with:
           command: build
