chore: update workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build Release Binaries
+name: Release
 
 on:
   release:
@@ -6,110 +6,85 @@ on:
 
 jobs:
   build:
-    name: Build for ${{ matrix.os }} (${{ matrix.target }})
+    name: Build ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         include:
           # Linux builds
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            suffix: ""
-            name: "Linux x64"
+            artifact_name: krkr-tts-linux-amd64
+            asset_name: krkr-tts-linux-amd64.tar.gz
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            suffix: ""
-            name: "Linux ARM64 (Raspberry Pi 64-bit)"
-            use_cross: true
-          - os: ubuntu-latest
-            target: armv7-unknown-linux-gnueabihf
-            suffix: ""
-            name: "Linux ARMv7 (Raspberry Pi 32-bit)"
-            use_cross: true
+            artifact_name: krkr-tts-linux-arm64
+            asset_name: krkr-tts-linux-arm64.tar.gz
           
           # macOS builds
           - os: macos-latest
             target: x86_64-apple-darwin
-            suffix: ""
-            name: "macOS x64"
+            artifact_name: krkr-tts-macos-amd64
+            asset_name: krkr-tts-macos-amd64.tar.gz
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact_name: krkr-tts-macos-arm64
+            asset_name: krkr-tts-macos-arm64.tar.gz
           
           # Windows builds
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            suffix: ".exe"
-            name: "Windows x64"
+            artifact_name: krkr-tts-windows-amd64
+            asset_name: krkr-tts-windows-amd64.zip
           - os: windows-latest
             target: i686-pc-windows-msvc
-            suffix: ".exe"
-            name: "Windows x86 (32-bit)"
+            artifact_name: krkr-tts-windows-x86
+            asset_name: krkr-tts-windows-x86.zip
           - os: windows-latest
             target: aarch64-pc-windows-msvc
-            suffix: ".exe"
-            name: "Windows ARM64"
-    
+            artifact_name: krkr-tts-windows-arm64
+            asset_name: krkr-tts-windows-arm64.zip
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
-      
-      # Install cross for ARM Linux targets
-      - name: Install cross
-        if: matrix.use_cross
-        run: cargo install cross
-      
-      # Build with cross for ARM Linux targets
-      - name: Build with cross (ARM Linux)
-        if: matrix.use_cross
-        run: cross build --release --target ${{ matrix.target }}
-      
-      # Build with cargo for other targets
-      - name: Build with cargo
-        if: ${{ !matrix.use_cross }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target ${{ matrix.target }}
-      
-      - name: Prepare artifacts
-        shell: bash
-        run: |
-          ARTIFACTS_DIR=krkr-tts-${{ matrix.target }}
-          mkdir -p $ARTIFACTS_DIR
-          
-          # Copy binaries
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            cp target/${{ matrix.target }}/release/krkr-tts-client.exe $ARTIFACTS_DIR/
-            cp target/${{ matrix.target }}/release/krkr-tts-server.exe $ARTIFACTS_DIR/
-          else
-            cp target/${{ matrix.target }}/release/krkr-tts-client $ARTIFACTS_DIR/
-            cp target/${{ matrix.target }}/release/krkr-tts-server $ARTIFACTS_DIR/
-          fi
-          
-          # Copy config
-          mkdir -p $ARTIFACTS_DIR/config
-          cp -r config/* $ARTIFACTS_DIR/config/
-          
-          # Copy README and LICENSE
-          cp README.md LICENSE $ARTIFACTS_DIR/
-      
-      - name: Create archive
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            7z a -tzip krkr-tts-${{ matrix.target }}.zip krkr-tts-${{ matrix.target }}
-          else
-            tar -czvf krkr-tts-${{ matrix.target }}.tar.gz krkr-tts-${{ matrix.target }}
-          fi
-      
-      - name: Upload binaries to release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            krkr-tts-${{ matrix.target }}.*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+    - uses: actions/checkout@v3
+
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: ${{ matrix.target }}
+
+    - name: Install cross-compilation dependencies (Linux ARM)
+      if: matrix.target == 'aarch64-unknown-linux-gnu'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc-aarch64-linux-gnu
+
+    - name: Build
+      run: cargo build --release --bins --target ${{ matrix.target }}
+
+    - name: Prepare artifacts (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        mkdir -p ${{ matrix.artifact_name }}/
+        cp target/${{ matrix.target }}/release/krkr-tts-client ${{ matrix.artifact_name }}/
+        cp target/${{ matrix.target }}/release/krkr-tts-server ${{ matrix.artifact_name }}/
+        tar czvf ${{ matrix.asset_name }} ${{ matrix.artifact_name }}/
+
+    - name: Prepare artifacts (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        mkdir -p ${{ matrix.artifact_name }}
+        cp target/${{ matrix.target }}/release/krkr-tts-client.exe ${{ matrix.artifact_name }}/
+        cp target/${{ matrix.target }}/release/krkr-tts-server.exe ${{ matrix.artifact_name }}/
+        powershell Compress-Archive -Path ${{ matrix.artifact_name }} -DestinationPath ${{ matrix.asset_name }}
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./${{ matrix.asset_name }}
+        asset_name: ${{ matrix.asset_name }}
+        asset_content_type: application/octet-stream
