--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: write
+  
 jobs:
   build:
     name: Build ${{ matrix.target }}
@@ -79,12 +82,7 @@ jobs:
         cp target/${{ matrix.target }}/release/krkr-tts-server.exe ${{ matrix.artifact_name }}/
         powershell Compress-Archive -Path ${{ matrix.artifact_name }} -DestinationPath ${{ matrix.asset_name }}
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
+    - name: Upload Release Asset using GitHub CLI
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./${{ matrix.asset_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+      run: gh release upload ${{ github.event.release.tag_name }} ${{ matrix.asset_name }}
